--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "symfony/var-dumper": "^6.2"
+        "symfony/var-dumper": "^6.2",
+        "fakerphp/faker": "^1.21"
     },
     "scripts": {
         "test": "phpunit tests"
